--- a/app/css/main.css
+++ b/app/css/main.css
@@ -816,24 +816,6 @@ hr {
 /*FONTS*/
 /*********************************************/
 @font-face {
-  font-family: "Tahoma";
-  font-style: normal;
-  font-weight: 400;
-  src: url("../fonts/Tahoma/Tahoma.eot?") format("eot"), url("../fonts/Tahoma/Tahoma.ttf") format("truetype"), url("../fonts/Tahoma/Tahoma.woff") format("woff"); }
-
-@font-face {
-  font-family: "Arial Narrow";
-  font-style: normal;
-  font-weight: 400;
-  src: url("../fonts/Arial Narrow/Arial Narrow.eot?") format("eot"), url("../fonts/Arial Narrow/Arial Narrow.ttf") format("truetype"), url("../fonts/Arial Narrow/Arial Narrow.woff") format("woff"); }
-
-@font-face {
-  font-family: "Arial Narrow Bold";
-  font-style: normal;
-  font-weight: 700;
-  src: url("../fonts/Arial Narrow Bold/Arial Narrow Bold.eot?") format("eot"), url("../fonts/Arial Narrow Bold/Arial Narrow Bold.ttf") format("truetype"), url("../fonts/Arial Narrow Bold/Arial Narrow Bold.woff") format("woff"); }
-
-@font-face {
   font-family: "FontAwesome";
   font-style: normal;
   font-weight: 400;
@@ -1094,28 +1076,59 @@ button {
   cursor: pointer; }
 
 .decor_lineVertical:hover {
-  color: #CC0000; }
+  color: #C00; }
 
 .decor_gantel:after {
+  content: '';
+  right: -10px;
+  top: 2px;
   position: absolute;
-  right: 0;
-  top: 0;
   background-image: url(../image/sprite.png);
   background-position: -37px 0px;
   width: 18px;
-  height: 9px; }
+  height: 9px;
+  z-index: 2; }
 
-.navItem_n_activ {
-  font-size: 16px;
-  color: #000;
-  text-decoration: none;
-  font-weight: normal; }
+.bl_pagination__item:not(:first-child):before {
+  content: '|';
+  position: absolute;
+  left: -4px;
+  color: inherit;
+  z-index: 2; }
 
-.navItemSel {
+.bl_pagination__full {
+  display: inline-block; }
+
+.bl_pagination__item {
+  position: relative;
+  display: inline-block;
+  font-size: 16px; }
+
+.bl_pagination__link {
+  display: block;
+  color: #006699;
+  padding: 0 6px; }
+  .bl_pagination__link:hover, .bl_pagination__link:active {
+    text-decoration: none;
+    color: #CC0000; }
+
+.bl_pagination__link_active {
   font-size: 18px;
   color: #096;
   text-decoration: none;
   font-weight: bold; }
+
+.bl_pagination__before {
+  text-transform: uppercase; }
+  .bl_pagination__before:before {
+    content: '<<';
+    color: inherit; }
+
+.bl_pagination__next {
+  text-transform: uppercase; }
+  .bl_pagination__next:after {
+    content: '>>';
+    color: inherit; }
 
 .nav {
   font-size: 12px;
@@ -1459,7 +1472,10 @@ button {
   font-family: Verdana, Arial, Helvetica, sans-serif;
   font-size: 12px; }
 
-.style2b {
+.style2b,
+.nav_text {
+  position: relative;
+  padding-right: 10px;
   font-family: Verdana, Arial, Helvetica, sans-serif;
   font-size: 12px;
   font-weight: bold; }
@@ -3258,7 +3274,6 @@ button {
   top: 25px; }
 
 .navItem_linkPage {
-  font-family: "MS Sans Serif", Verdana, Helvetica, Arial, sans-serif;
   font-size: 14px;
   color: #006699;
   text-decoration: underline;
@@ -3266,14 +3281,12 @@ button {
   cursor: pointer; }
 
 .navItem_linkPage:hover {
-  font-family: "MS Sans Serif", Verdana, Helvetica, Arial, sans-serif;
   font-size: 14px;
   color: #CC0000;
   text-decoration: underline;
   cursor: pointer; }
 
 .textItem_linkPage {
-  font-family: "MS Sans Serif", Verdana, Helvetica, Arial, sans-serif;
   font-size: 14px;
   color: #000;
   text-decoration: none;
@@ -3829,13 +3842,6 @@ label.css-label {
   float: left;
   text-align: center;
   width: 100%; }
-
-.numpage_navigation {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  margin-left: 10px;
-  margin-right: 10px;
-  float: left; }
 
 .mob_ver {
   text-align: center; }
