Finished catalog Page

--- a/app/sass/helpers/_media.scss
+++ b/app/sass/helpers/_media.scss
@@ -6,6 +6,9 @@
 /* Large Devices, Wide Screens 1280px */
 @media only screen and (max-width: 1200px) {
 
+  .blok_main_1{
+    min-width:initial;
+  }
 }
 
 /* Medium Devices, Desktops 992px */
