--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1193,7 +1193,59 @@ button {
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2); }
 
 .bl_mainProduct__mainImgBlock {
-  position: relative; }
+  position: relative;
+  width: 100%; }
+
+.product_slider {
+  padding: 0 4px; }
+
+.product_slider__item_active {
+  border-radius: 10px;
+  border: 2px solid rgba(25, 194, 21, 0.8); }
+
+.product_slider__img {
+  border-radius: 10px;
+  box-sizing: border-box;
+  border: none;
+  box-shadow: 0 1px 2px #000;
+  cursor: pointer; }
+
+.owl-carousel .owl-nav {
+  position: absolute;
+  width: 100%;
+  height: 0;
+  top: 40%;
+  left: 0;
+  z-index: 999; }
+  .owl-carousel .owl-nav .owl-prev,
+  .owl-carousel .owl-nav .owl-next {
+    position: absolute;
+    left: 0;
+    width: 23px;
+    height: 23px;
+    box-sizing: border-box;
+    border-radius: 50%;
+    background-color: #666;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.2);
+    line-height: 25px;
+    transition: all 0.2s; }
+    .owl-carousel .owl-nav .owl-prev:before,
+    .owl-carousel .owl-nav .owl-next:before {
+      content: "\f053";
+      display: block;
+      margin: 0 auto;
+      text-align: center;
+      font-family: "FontAwesome";
+      font-size: 12px;
+      color: #fff;
+      width: 14px;
+      height: 14px; }
+  .owl-carousel .owl-nav .owl-next {
+    left: 93%; }
+    .owl-carousel .owl-nav .owl-next:before {
+      content: "\f054";
+      width: 12px;
+      height: 12px; }
 
 /*Sub level menu items
 ---------------------------------------*/
@@ -1202,8 +1254,8 @@ button {
   right: 0;
   top: 0;
   content: '\f0da';
-  font-family: FontAwesome;
-  font-size: 12px;
+  font-family: "FontAwesome";
+  font-size: 11px;
   width: 20px;
   /*height: 100%;*/
   color: #000; }
