--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -239,7 +239,10 @@ button {
 .price {
   width: 100%;
   position: relative;
-  font-size: 16px;
+  font-weight: bold;
+  background-color: #DFFFEF;
+  border-radius: 5px;
+  padding: 15px;
 }
 
 .price_box {
@@ -250,7 +253,7 @@ button {
   white-space: nowrap;
   text-align: center;
   padding: 5px 0;
-  font-size: 16px;
+  font-size: 14px;
 }
 .price_box.active{
   background-color: inherit;
@@ -464,15 +467,25 @@ button {
   width: 100%;
 }
 
+.slider_wrapper{
+  width: 100%;
+  margin: 0 auto;
+  min-height: 60px;
+  padding: 10px 40px;
+  box-sizing: border-box;
+  box-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  background-color: #fff;
+}
+
 
 .product_slider{
 
   position: relative;
-  padding: 10px 40px;
-  background-color: #fff;
+
+
   margin: 0 auto;
   min-height: 60px;
-  box-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+
 }
 
 .bl_mainProduct__mainImgBlock{
@@ -520,7 +533,7 @@ button {
   .owl-next{
 
     position: absolute;
-    left: 0;
+    left:-10%;
     width: 23px;
     height: 23px;
     box-sizing: border-box;
@@ -546,13 +559,12 @@ button {
   }
 
   .owl-next {
-    left: 93%;
+    left: 103%;
     &:before {
       content: "\f054";
       width: 12px;
       height: 12px;
     }
-
   }
 }
 
@@ -997,7 +1009,7 @@ button {
 }
 
 .priceh1 {
-  font-family: "MS Sans Serif", Verdana, Helvetica, Arial;
+
   font-size: 16px;
   color: #006699;
   font-style: normal;
@@ -1005,14 +1017,7 @@ button {
   text-decoration: none;
 }
 
-.priceh1:hover {
-  font-family: "MS Sans Serif", Verdana, Helvetica, Arial;
-  font-size: 16px;
-  color: #CC0000;
-  font-style: normal;
-  font-weight: normal;
-  text-decoration: none
-}
+
 
 /*//////////////////////////////////////*/
 /*.subGr_separator {*/
@@ -1854,6 +1859,78 @@ button {
   font-weight: bold;
 }
 
+//// Language
+
+
+
+//// Language
+
+
+.bl_language {
+  position: relative;
+  float: right;
+  margin-left: 40px;
+  padding-right: 22px;
+  cursor: pointer;
+  text-transform: uppercase;
+  z-index: 8;
+
+}
+
+.bl_language__active {
+  &:after {
+    position: absolute;
+    top: 0;
+    left: 60%;
+    content: "\f0d7";
+    font-size: 20px;
+    color: #000;
+    width: 15px;
+    height: 8px;
+    font-family: $FontAwesome;
+  }
+}
+
+.bl_language__variables {
+
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 50px;
+  background-color: #fff;
+
+  z-index: 9;
+}
+
+.bl_language__variables_item {
+  position: relative;
+  margin-left: 5px;
+  z-index: 11;
+  &:hover {
+    font-weight: bold;
+    text-decoration: underline;
+  }
+
+}
+
+.bl_language__variables_item:hover:after {
+  position: absolute;
+  top: 0;
+  right:0;
+  content: "\f0d9";
+  font-size: 20px;
+  color: #000;
+  width: 15px;
+  height: 8px;
+  font-family: $FontAwesome;
+}
+
+
+
+
+
+
+
 .get_help {
   color: #000;
   background-color: #CCC;
@@ -1874,39 +1951,39 @@ button {
   writing-mode: tb-rl;
 }
 
-.form_error_text {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
-  color: #A40000;
-  text-decoration: none;
-}
+//.form_error_text {
+//  font-family: Arial, Helvetica, sans-serif;
+//  font-size: 12px;
+//  color: #A40000;
+//  text-decoration: none;
+//}
 
-.send_text {
-  font-family: "MS Sans Serif", Verdana, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  color: #009;
-  font-style: normal;
-  font-weight: normal;
-  text-decoration: none
-}
+//.send_text {
+//  font-family: "MS Sans Serif", Verdana, Helvetica, Arial, sans-serif;
+//  font-size: 16px;
+//  color: #009;
+//  font-style: normal;
+//  font-weight: normal;
+//  text-decoration: none
+//}
+//
+//.send_input {
+//  font-family: "MS Sans Serif", Verdana, Helvetica, Arial, sans-serif;
+//  font-size: 16px;
+//  color: #000;
+//  font-style: normal;
+//  font-weight: normal;
+//  text-decoration: none
+//}
 
-.send_input {
-  font-family: "MS Sans Serif", Verdana, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  color: #000;
-  font-style: normal;
-  font-weight: normal;
-  text-decoration: none
-}
-
-.send_comment {
-  font-family: "MS Sans Serif", Verdana, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  color: #066;
-  font-style: normal;
-  font-weight: normal;
-  text-decoration: none
-}
+//.send_comment {
+//  font-family: "MS Sans Serif", Verdana, Helvetica, Arial, sans-serif;
+//  font-size: 14px;
+//  color: #066;
+//  font-style: normal;
+//  font-weight: normal;
+//  text-decoration: none
+//}
 
 .b_table_item {
   font-family: "MS Sans Serif", Verdana, Helvetica, Arial, sans-serif;
@@ -2475,44 +2552,13 @@ button {
 
 }
 
-.one_addbutton {
-
-  font-size: 14px;
-  color: #FFF;
-  font-style: normal;
-  cursor: pointer;
-  width: 80px;
-  height: 35px;
+.buy_container .addbutton{
   background-color: #62c206;
-  font-weight: bold;
-  margin: 5px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
+  &:hover{
+    background-color: #4e9a06;
+  }
 }
 
-.one_addbutton_norest {
-  font-family: "MS Sans Serif", Verdana, Helvetica, Arial;
-  font-size: 14px;
-  color: #FFF;
-  font-style: normal;
-  cursor: pointer;
-  width: 80px;
-  height: 35px;
-  background-color: #62c206;
-  font-weight: bold;
-  margin: 5px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-}
-
-.one_addbutton_norest:hover {
-  background-color: #4e9a06;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-}
 
 .one_tov_info {
   position: relative;
@@ -3722,7 +3768,7 @@ label.css-label {
   float: none;
   height: 60px;
   color: #4d4d4d;
-  margin: 0px auto;
+  margin: 0 auto;
   width: auto;
   display: table;
 
@@ -3771,6 +3817,462 @@ label.css-label {
 #back-top {
   display: none;
 }
+
+////////// BASCKET
+
+
+.bl_receiver,
+.bl_deliveryMethod {
+  margin-top: 32px;
+  padding: 10px 65px;
+  height: 100%;
+  min-height: 500px;
+  background-color: #fff;
+  .text_title {
+    color: $color_blue;
+    padding-bottom: 6px;
+    border-bottom: 1px solid #eee;
+  }
+}
+
+.form-group {
+  margin: 0;
+
+  input, textarea, select {
+    outline: none;
+    border: 1px solid #d7d7d7;
+    box-shadow: 0 0 0 $color_blue;
+    &:focus {
+      box-shadow: 0 0 6px $color_blue;
+    }
+  }
+
+}
+
+.personal-form-review .form-control,
+.personal-form-review .bl_review__raiting {
+  margin-top: 16px;
+  //height: 30px;
+}
+
+.form-lineStyle {
+  width: 100%;
+}
+
+.form_telephone {
+  clear: both;
+}
+
+.text_paragraph {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  font-family: $ArialBold;
+  color: #333;
+  font-size: 13px;
+  line-height: 30px;
+}
+
+.text_decor__importantField {
+  &:before {
+    position: absolute;
+    top: 0;
+    left: -10px;
+    content: "*";
+    color: #de0d16;
+    font-size: 16px;
+    line-height: 30px;
+  }
+}
+
+.shoppingBasket_label {
+  position: relative;
+  width: 100%;
+  cursor: pointer;
+}
+
+.shoppingBasket_input {
+  position: absolute;
+  visibility: hidden;
+}
+
+.shoppingBasket_text {
+  position: relative;
+  width: 100%;
+
+  margin-top: 3px;
+  color: #333;
+  font-size: 15px;
+  line-height: 16px;
+
+  &:before {
+    position: absolute;
+    top: 2px;
+    left: -18px;
+    content: "";
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background-color: white;
+    border: 1px solid #999;
+    z-index: 2;
+  }
+}
+
+.shoppingBasket_label input:checked + .shoppingBasket_text {
+
+  &:before {
+    border-color: $color_red2;
+  }
+
+  &:after {
+    content: "";
+    position: absolute;
+    top: 4px;
+    left: -16px;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background-color: #de0d16;
+
+    z-index: 3;
+  }
+}
+
+.group_selects {
+  margin-top: 14px;
+  width: 100%;
+}
+
+#cart_table {
+  background-color: #fff;
+  padding: 0 15px
+}
+
+.shoppingBasket_product {
+  clear: both;
+  width: 100%;
+  margin-top: 0;
+}
+
+.boredr_bottom {
+
+  border-top: 1px solid red;
+}
+
+.table_title {
+  display: block;
+  width: 100%;
+  font-size: 16px;
+  text-transform: uppercase;
+  text-align: center;
+
+}
+
+.table_title__left {
+  text-align: left;
+}
+
+.shoppingBasket_product__good {
+  border-bottom: 1px solid #eee;
+  padding: 8px 0;
+}
+
+.shoppingBasket_product__title {
+  padding-bottom: 3px;
+  border-bottom: 1px solid $color_blue;
+}
+
+.shoppingBasket_product__item {
+  clear: both;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  width: 100%;
+  min-height: 80px;
+  margin-top: 0;
+  text-align: center;
+
+}
+
+.shoppingBasket_product__wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.wrapperButton {
+  float: left;
+  display: inline-block;
+  position: relative;
+  height: 100%;
+  min-height: 120px;
+}
+
+.delite_product {
+  position: absolute;
+  left: 0;
+  top: 35%;
+  width: 24px;
+  height: 24px;
+  background: transparent;
+  color: $color_red;
+  font-size: 24px;
+
+  &:before {
+
+    content: "\f05c";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    font-family: $FontAwesome;
+
+    font-size: 24px;
+    z-index: 2;
+  }
+
+  &:hover {
+    color: $color_red2;
+  }
+
+}
+
+.shoppingBasket_product__img {
+  float: left;
+  margin-left: 30px;
+  max-width: 120px;
+  margin-right: 2%;
+
+}
+
+.shoppingBasket_product__description {
+  display: flex;
+  flex-direction: column;
+  min-height: 80px; // зависит от размеров фотки
+  justify-content: center;
+
+}
+.shoppingBasket_product__name {
+  text-align: center !important;
+  margin: 0 0 25px;
+  font-size: 16px;
+  color: #000;
+}
+
+.shoppingBasket_product__value {
+  text-align: left;
+  margin-top: 5px;
+  font-size: 14px;
+  color: #999;
+}
+
+.shoppingBasket_product__mark {
+  color: black;
+  font-size: 16px;
+}
+
+.good-price__old {
+  text-align: center;
+  white-space: nowrap;
+  font-size: 16px;
+  margin: 5px auto 0;
+  text-decoration: line-through;
+}
+
+.good-price__new {
+
+  text-align: center;
+  white-space: nowrap;
+  font-size: 20px;
+  color: $color_red;
+  margin: 5px auto 0;
+  display: inline-block;
+}
+
+.good-price__normal {
+  white-space: nowrap;
+  color: black;
+  font-size: 16px;
+}
+
+.shoppingBasket_product__fullPrise {
+  margin-top: 20px;
+  width: 100%;
+  text-align: left;
+
+  min-height: 30px;
+  background-color: #fffcd9;
+  border: 1px solid #ffc836;
+
+  p {
+    width: 100%;
+  }
+
+  .table_title {
+    line-height: 30px;
+    text-align: left;
+  }
+}
+
+.shoppingBasket_fullPrise {
+  font-size: 16px;
+  line-height: 30px;
+  text-align: right;
+  &:first-child{
+    text-transform: uppercase;
+  }
+
+}
+
+.button_continueBuying {
+  margin-top: 18px;
+  width: 100%;
+  max-width:206px;
+  min-height: 35px;
+  box-sizing: border-box;
+  background-color: #000;
+  transition: all .3s;
+
+  &:hover {
+    transition: all .3s;
+    background-color: $color_blue;
+  }
+}
+
+
+.button_buyProduct{
+  float: right;
+  width: 200px;
+  margin-top: 20px;
+  background-color: #d7ebf9;
+  border: 1px solid #aed0ea;
+  color:#2779aa;
+}
+
+
+
+.button_continueBuying__link{
+
+  color: $color_blue;
+
+  &:hover {
+    color: $color_blue2;
+    text-decoration: underline;
+  }
+
+}
+
+.decor_line {
+  position: relative;
+  margin-top: 35px;
+  width: 100%;
+  height: 10px;
+
+  &:after {
+    position: absolute;
+    left: 0;
+    transform: translateY(50%);
+    content: "";
+    height: 1px;
+    width: 100%;
+    background-color: $color_red;
+  }
+}
+
+.decor_close{
+  &:after {
+    content: "\f00d";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family:$FontAwesome;
+    font-size: 24px;
+    line-height:24px;
+  }
+}
+
+
+///
+
+.shoppingBasket_product__item {
+  clear: both;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  width: 100%;
+  min-height: 80px;
+  margin-top: 0;
+  text-align: center;
+
+}
+
+.block_quantity__box {
+  position: relative;
+  height: 40px;
+  margin-top: 10px;
+  box-sizing: border-box;
+  background-color: white;
+  border: 1px solid #999;
+
+  min-width: 128px;
+}
+
+.block_quantity__minus,
+.block_quantity__plus{
+  position: absolute;
+  left: 0;
+  top: 0;
+  text-align: center;
+  width: 40px;
+  height: 40px;
+  font-size: 22px;
+  background-color: $color_blue;
+  font-weight: bold;
+  color: #fff;
+  &:hover{
+    background-color: $color_blue2;
+  }
+}
+
+.block_quantity__plus {
+  top: 0;
+  left: initial;
+  right: 0;
+}
+
+.block_quantity__input {
+  display: inline-block;
+  text-align: center;
+  margin: 0 auto;
+  width: 40px;
+  height: 100%;
+  box-sizing: border-box;
+
+  &::placeholder {
+    display: inline-block;
+
+    color: #333;
+    font-size: 16px;
+    line-height: 20px;
+    text-transform: uppercase;
+  }
+}
+
+.options .form-group {
+  margin-bottom: 0 !important;
+}
+
+
+
 
 /*********************************************/
 /*TYPOGRAPHY*/
