--- a/app/sass/helpers/_media.scss
+++ b/app/sass/helpers/_media.scss
@@ -14,6 +14,16 @@
 /* Medium Devices, Desktops 992px */
 @media only screen and (max-width: 991px) {
 
+
+  .blok_main_1.category_menu{
+    width: 100%;
+  }
+  .buttonStartMenu{
+    display: block;
+    margin: 0 auto;
+  }
+
+
   .top-info__inner {
     justify-content: space-around;
   }
@@ -46,6 +56,7 @@
   .footer_part3 {
     order: 3;
   }
+
 }
 
 /* Small Devices, Tablets 768px */
