--- a/app/sass/helpers/_media.scss
+++ b/app/sass/helpers/_media.scss
@@ -21,6 +21,7 @@
   .buttonStartMenu{
     display: block;
     margin: 0 auto;
+    cursor: pointer;
   }
 
 
@@ -34,6 +35,10 @@
     justify-content: space-between;
     width: 100%;
   }
+  .left-group-vlast{
+    display: none;
+  }
+
 
   .copyr {
     margin-top: 20px;
