--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -609,7 +609,6 @@ button {
 .buttonStartMenu {
 
   position: relative;
-  display: inline-block;
   width: 190px;
   height: 40px;
   line-height: 40px;
@@ -3460,7 +3459,7 @@ label.css-label {
 }
 
 .minmax-price-user {
-  font-family: "MS Sans Serif", Verdana, Helvetica, Arial;
+
   font-size: 1em;
   color: #009900; /*#333333;*/
   font-style: normal;
@@ -3469,13 +3468,31 @@ label.css-label {
 }
 
 .minmax-price-user-error {
-  font-family: "MS Sans Serif", Verdana, Helvetica, Arial;
+
   font-size: 1em;
-  color: #FF0000;
+  color: #F00;
   font-style: normal;
   font-weight: normal;
 
 }
+
+
+.button_filtr{
+  position: relative;
+  clear: both;
+  margin: 0 auto;
+  width: 190px;
+  height: 40px;
+  line-height: 40px;
+  color: #000;
+  outline: none;
+  border: 2px solid #F64C2B;
+  background-color: #FFC0CB;
+  border-radius: 5px;
+  text-transform: uppercase;
+  z-index: 10;
+}
+
 
 .f_price_del {
   position: relative;
